--- a/Sources/Sandbox.Common/Sandbox.Common.csproj
+++ b/Sources/Sandbox.Common/Sandbox.Common.csproj
@@ -178,6 +178,7 @@
     <Compile Include="ModAPI\IMyVoxelShapeRamp.cs" />
     <Compile Include="ModAPI\IMyVoxelShapeSphere.cs" />
     <Compile Include="ModAPI\Ingame\IMyAirVent.cs" />
+    <Compile Include="ModAPI\Ingame\IMyGravityLift.cs" />
     <Compile Include="ModAPI\Ingame\IMyPowerProducer.cs" />
     <Compile Include="ModAPI\Ingame\IMyRadioAntenna.cs" />
     <Compile Include="ModAPI\Ingame\IMyAssembler.cs" />
@@ -321,6 +322,7 @@
     <Compile Include="ObjectBuilders\Definitions\MyObjectBuilder_ControllerSchemaDefinition.cs" />
     <Compile Include="ObjectBuilders\Definitions\MyObjectBuilder_CryoChamberDefinition.cs" />
     <Compile Include="ObjectBuilders\Definitions\MyObjectBuilder_EnvironmentItemsDefinition.cs" />
+    <Compile Include="ObjectBuilders\Definitions\MyObjectBuilder_GravityLiftDefinition.cs" />
     <Compile Include="ObjectBuilders\Definitions\MyObjectBuilder_LockableDrumDefinition.cs" />
     <Compile Include="ObjectBuilders\Definitions\MyObjectBuilder_MaterialSoundsDefinition.cs" />
     <Compile Include="ObjectBuilders\Components\MyObjectBuilder_ScriptManager.cs" />
@@ -364,6 +366,8 @@
     <Compile Include="ObjectBuilders\MyObjectBuilder_CryoChamber.cs" />
     <Compile Include="ObjectBuilders\MyObjectBuilder_DestroyableItems.cs" />
     <Compile Include="ObjectBuilders\MyObjectBuilder_EnvironmentItems.cs" />
+    <Compile Include="ObjectBuilders\MyObjectBuilder_GravityLift.cs" />
+    <Compile Include="ObjectBuilders\MyObjectBuilder_Lift.cs" />
     <Compile Include="ObjectBuilders\MyObjectBuilder_MissionTriggers.cs" />
     <Compile Include="ObjectBuilders\MyObjectBuilder_OxygenGenerator.cs" />
     <Compile Include="ObjectBuilders\Definitions\MyObjectBuilder_OxygenGeneratorDefinition.cs" />
